update nanopb to 0.4.4
Update workspace.bzl

grpc

systemlibs: Add stub bazel/grpc_deps.bzl to grpc dep

add BUILD config for verbs

add miss .h file

--- a/tensorflow/contrib/verbs/BUILD
+++ b/tensorflow/contrib/verbs/BUILD
@@ -71,6 +71,7 @@ cc_library(
     deps = [
         ":verbs_service_proto_cc",
         "//tensorflow:grpc++",
+        "//tensorflow/core/distributed_runtime/rpc:grpc_util",
     ],
 )
 
