Add matmul_grad_filter + biasaddgrad fusion

--- a/tensorflow/core/grappler/optimizers/BUILD
+++ b/tensorflow/core/grappler/optimizers/BUILD
@@ -829,9 +829,14 @@ tf_cc_test_mkl(
         "no_mac",
     ],
     deps = [
+        ":model_pruner",
         ":remapper",
         "//tensorflow/cc:cc_ops",
         "//tensorflow/cc:cc_ops_internal",
+        "//tensorflow/cc:client_session",
+        "//tensorflow/cc:gradients",
+        "//tensorflow/cc:grad_ops",
+        "//tensorflow/cc:grad_op_registry",
         "//tensorflow/core:framework",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/core:test",
