[Op] Add embedding fusion UT.

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -1613,6 +1613,7 @@ cc_library(
         "//tensorflow/core/kernels:function_ops",
         "//tensorflow/core/kernels:functional_ops",
         "//tensorflow/core/kernels:fused_embedding_ops",
+        "//tensorflow/core/kernels:fused_embedding_ops_cpu",
         "//tensorflow/core/kernels:grappler",
         "//tensorflow/core/kernels:hash_ops",
         "//tensorflow/core/kernels:histogram_op",
