--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -5363,6 +5363,27 @@ tf_cc_test(
     ],
 )
 
+tf_cc_test(
+    name = "embedding_lookup_sparse_post_grad_op_test",
+    size = "small",
+    srcs = ["fused_embedding/embedding_lookup_sparse_post_grad_op_test.cc"],
+    deps = [
+        ":fused_embedding_ops_cpu",
+        ":ops_testutil",
+        ":ops_util",
+        "//tensorflow/cc:cc_ops",
+        "//tensorflow/core:core_cpu",
+        "//tensorflow/core:framework",
+        "//tensorflow/core:framework_internal",
+        "//tensorflow/core:lib",
+        "//tensorflow/core:protos_all_cc",
+        "//tensorflow/core:tensorflow",
+        "//tensorflow/core:test",
+        "//tensorflow/core:test_main",
+        "//tensorflow/core:testlib",
+    ],
+)
+
 tf_kernel_library(
     name = "fused_embedding_ops_cpu",
     srcs = [
