[UT] Add embedding-fusion test in python side.

--- a/tensorflow/python/feature_column/BUILD
+++ b/tensorflow/python/feature_column/BUILD
@@ -205,6 +205,18 @@ tf_py_test(
 )
 
 tf_py_test(
+    name = "feature_column_v2_emb_fusion_test",
+    srcs = ["feature_column_v2_emb_fusion_test.py"],
+    additional_deps = [":feature_column_v2_test_main_lib"],
+    shard_count = 5,
+    tags = [
+        "no_cuda_on_cpu_tap",
+        "no_pip",
+        "no_windows",
+    ],
+)
+
+tf_py_test(
     name = "dense_features_v2_test",
     srcs = ["dense_features_v2_test.py"],
     additional_deps = [
