[BM] Add post op BM test.
bazel test --flaky_test_attempts 1 --test_arg=--benchmarks=all --test_output=all --nocache_test_results --cxxopt=-D_GLIBCXX_USE_CXX11_ABI=0 //tensorflow/core/kernels:embedding_lookup_sparse_post_op_test

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -5295,6 +5295,7 @@ tf_kernel_library(
         "fused_embedding/embedding_lookup_sparse_local_op.cc",
         "fused_embedding/embedding_lookup_sparse_pre_op.cc",
         "fused_embedding/embedding_lookup_sparse_post_op.cc",
+        "fused_embedding/embedding_lookup_sparse_post_op_origin.cc",
     ],
     hdrs = ["fused_embedding/embedding_lookup_sparse_op.h"],
     gpu_srcs = [
